--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,7 @@
 
   <!-- FOCUS Card -->
   <div class="card">
-    <div class="progress-ring">
+    <div class=" progress-ring-focus">
       <div class="inner-circle">
         <img
           src="assets/icons8-coffee-50.png"
@@ -49,7 +49,7 @@
 
   <!-- RELAX Card -->
   <div class="card">
-    <div class="progress-ring">
+    <div class="progress-ring-relax">
       <div class="inner-circle">
         <img
           src="assets/icons8-coffee-50.png"
